Fix contrast on resource nav-pills.

--- a/public/assets/stylesheets/custom/scss/components/_navbar.scss
+++ b/public/assets/stylesheets/custom/scss/components/_navbar.scss
@@ -25,3 +25,12 @@
 .top-bar {
   border: none !important;
 }
+
+.navbar .nav.nav-pills {
+  a,
+  a:visited,
+  a:hover,
+  a:focus {
+    background-color: transparent;
+  }
+}
